Intermittent Last test finished | application crashed [@ mozilla::gfx::VRManagerChild::RunFrameRequestCallbacks()]
Categories
(Core :: WebVR, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox67 | --- | unaffected |
firefox68 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: daoshengmu)
Details
(Keywords: crash, intermittent-failure, regression)
Crash Data
Attachments
(1 file)
#[markdown(off)]
Filed by: apavel [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=241675135&repo=autoland
08:04:02 INFO - REFTEST TEST-START | file:///Users/cltbld/tasks/task_1555832894/build/tests/reftest/tests/dom/vr/test/reftest/change_size.html == file:///Users/cltbld/tasks/task_1555832894/build/tests/reftest/tests/dom/vr/test/reftest/wrapper.html?change_size.png
08:04:02 INFO - REFTEST INFO | RESTORE PREFERENCE pref(dom.vr.controller.enumerate.interval,1000)
08:04:02 INFO - REFTEST INFO | RESTORE PREFERENCE pref(dom.vr.display.enumerate.interval,5000)
08:04:03 ERROR - TEST-UNEXPECTED-FAIL | Last test finished | application terminated with exit code 1
08:04:03 INFO - REFTEST INFO | Downloading symbols from: https://queue.taskcluster.net/v1/task/Z-Vd0d4jQ4WBZDamCYAPPQ/artifacts/public/build/target.crashreporter-symbols.zip
08:04:08 INFO - REFTEST INFO | Copy/paste: /Users/cltbld/tasks/task_1555832894/build/macosx64-minidump_stackwalk /var/folders/8x/1j9dcj1j0nv4mh6zsczcq4b800000x/T/tmpQ3sxtq.mozrunner/minidumps/439E8D1C-1B4A-4451-912F-311A1ED89A9F.dmp /var/folders/8x/1j9dcj1j0nv4mh6zsczcq4b800000x/T/tmpyXyAUJ
08:04:14 INFO - REFTEST INFO | Saved minidump as /Users/cltbld/tasks/task_1555832894/build/blobber_upload_dir/439E8D1C-1B4A-4451-912F-311A1ED89A9F.dmp
08:04:14 INFO - REFTEST INFO | Saved app info as /Users/cltbld/tasks/task_1555832894/build/blobber_upload_dir/439E8D1C-1B4A-4451-912F-311A1ED89A9F.extra
08:04:14 INFO - REFTEST PROCESS-CRASH | Last test finished | application crashed [@ mozilla::gfx::VRManagerChild::RunFrameRequestCallbacks()]
08:04:14 INFO - Crash dump filename: /var/folders/8x/1j9dcj1j0nv4mh6zsczcq4b800000x/T/tmpQ3sxtq.mozrunner/minidumps/439E8D1C-1B4A-4451-912F-311A1ED89A9F.dmp
08:04:14 INFO - Operating system: Mac OS X
08:04:14 INFO - 10.10.5 14F27
08:04:14 INFO - CPU: amd64
08:04:14 INFO - family 6 model 69 stepping 1
08:04:14 INFO - 4 CPUs
08:04:14 INFO -
08:04:14 INFO - GPU: UNKNOWN
08:04:14 INFO -
08:04:14 INFO - Crash reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
08:04:14 INFO - Crash address: 0x98
08:04:14 INFO - Process uptime: 6 seconds
08:04:14 INFO -
08:04:14 INFO - Thread 0 (crashed)
08:04:14 INFO - 0 XUL!mozilla::gfx::VRManagerChild::RunFrameRequestCallbacks() [VRManagerChild.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 383 + 0x3]
08:04:14 INFO - rax = 0x000000f04765384f rdx = 0x00000000000000f0
08:04:14 INFO - rcx = 0x000000f04765384f rbx = 0x0000000000000001
08:04:14 INFO - rsi = 0x00007fffffe00050 rdi = 0x0000000000000001
08:04:14 INFO - rbp = 0x00007fff51b2d240 rsp = 0x00007fff51b2d000
08:04:14 INFO - r8 = 0x0000000000000001 r9 = 0x00007fff51b2d068
08:04:14 INFO - r10 = 0x0000000000000001 r11 = 0x0000000003b6b008
08:04:14 INFO - r12 = 0x0000000000000000 r13 = 0x000000011c9c9a80
08:04:14 INFO - r14 = 0x0000000000000000 r15 = 0x0000000131c5d000
08:04:14 INFO - rip = 0x0000000110460eeb
08:04:14 INFO - Found by: given as instruction pointer in context
08:04:14 INFO - 1 XUL!mozilla::gfx::VRDisplayClient::FireEvents() [VRDisplayClient.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 121 + 0x8]
08:04:14 INFO - rbp = 0x00007fff51b2d3f0 rsp = 0x00007fff51b2d250
08:04:14 INFO - rip = 0x000000011045feaf
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 2 XUL!mozilla::gfx::VRManagerChild::UpdateDisplayInfo(nsTArray<mozilla::gfx::VRDisplayInfo>&) [VRDisplayClient.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 49 + 0x8]
08:04:14 INFO - rbp = 0x00007fff51b2d4a0 rsp = 0x00007fff51b2d400
08:04:14 INFO - rip = 0x0000000110469e41
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 3 XUL!mozilla::gfx::VRManagerChild::RecvUpdateDisplayInfo(nsTArray<mozilla::gfx::VRDisplayInfo>&&) [VRManagerChild.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 222 + 0x5]
08:04:14 INFO - rbp = 0x00007fff51b2d4e0 rsp = 0x00007fff51b2d4b0
08:04:14 INFO - rip = 0x000000011046a595
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 4 XUL!mozilla::gfx::PVRManagerChild::OnMessageReceived(IPC::Message const&) [PVRManagerChild.cpp: : 732 + 0x8]
08:04:14 INFO - rbp = 0x00007fff51b2d5d0 rsp = 0x00007fff51b2d4f0
08:04:14 INFO - rip = 0x000000010fc00d91
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 5 XUL!mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) [MessageChannel.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 2151 + 0xd]
08:04:14 INFO - rbp = 0x00007fff51b2d6a0 rsp = 0x00007fff51b2d5e0
08:04:14 INFO - rip = 0x000000010f855ae9
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 6 XUL!mozilla::ipc::MessageChannel::MessageTask::Run() [MessageChannel.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 1968 + 0x15f]
08:04:14 INFO - rbp = 0x00007fff51b2d6f0 rsp = 0x00007fff51b2d6b0
08:04:14 INFO - rip = 0x000000010f856d98
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 7 XUL!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 1180 + 0x6]
08:04:14 INFO - rbp = 0x00007fff51b2dbe0 rsp = 0x00007fff51b2d700
08:04:14 INFO - rip = 0x000000010f16de77
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 8 XUL!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 486 + 0xd]
08:04:14 INFO - rbp = 0x00007fff51b2dc10 rsp = 0x00007fff51b2dbf0
08:04:14 INFO - rip = 0x000000010f1708f9
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 9 XUL!mozilla::layers::CompositorThreadHolder::Shutdown() [CompositorThread.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 135 + 0xa8]
08:04:14 INFO - rbp = 0x00007fff51b2dc40 rsp = 0x00007fff51b2dc20
08:04:14 INFO - rip = 0x00000001103611f6
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 10 XUL!gfxPlatform::ShutdownLayersIPC() [gfxPlatform.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 1276 + 0x5]
08:04:14 INFO - rbp = 0x00007fff51b2dc80 rsp = 0x00007fff51b2dc50
08:04:14 INFO - rip = 0x00000001103a0fc2
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 11 XUL!mozilla::ShutdownXPCOM(nsIServiceManager*) [XPCOMInit.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 626 + 0x5]
08:04:14 INFO - rbp = 0x00007fff51b2dcf0 rsp = 0x00007fff51b2dc90
08:04:14 INFO - rip = 0x000000010f19271b
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 12 XUL!ScopedXPCOMStartup::~ScopedXPCOMStartup() [nsAppRunner.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 1243 + 0x8]
08:04:14 INFO - rbp = 0x00007fff51b2dd50 rsp = 0x00007fff51b2dd00
08:04:14 INFO - rip = 0x0000000113a40dfa
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 13 XUL!XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) [nsAppRunner.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 4749 + 0x19]
08:04:14 INFO - rbp = 0x00007fff51b2dec0 rsp = 0x00007fff51b2dd60
08:04:14 INFO - rip = 0x0000000113a4aacf
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 14 XUL!mozilla::BootstrapImpl::XRE_main(int, char**, mozilla::BootstrapConfig const&) [Bootstrap.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 45 + 0xf1]
08:04:14 INFO - rbp = 0x00007fff51b2e000 rsp = 0x00007fff51b2ded0
08:04:14 INFO - rip = 0x0000000113a56acd
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 15 firefox!main [nsBrowserApp.cpp:133b9a6eafebffdf83e548972a7ff5634433d5d0 : 291 + 0x1c2]
08:04:14 INFO - rbp = 0x00007fff51b2e450 rsp = 0x00007fff51b2e010
08:04:14 INFO - rip = 0x000000010e0d21bd
08:04:14 INFO - Found by: previous frame's frame pointer
08:04:14 INFO - 16 libdyld.dylib + 0x35c9
08:04:14 INFO - rbp = 0x00007fff51b2e460 rsp = 0x00007fff51b2e460
08:04:14 INFO - rip = 0x00007fff93c9c5c9
08:04:14 INFO - Found by: previous frame's frame pointer
Comment hidden (Intermittent Failures Robot) |
Comment 2•6 years ago
|
||
Don't mark intermittent crashes as P5s. We want them to go to triage owners.
Assignee | ||
Comment 3•6 years ago
|
||
Assignee | ||
Comment 4•6 years ago
•
|
||
IIRC, we ever had this cancel VR task function, but it was removed somehow.
Assignee | ||
Comment 5•6 years ago
|
||
Assignee | ||
Comment 6•6 years ago
|
||
This crash causes when CompositorThread is shutdown, but our VR tasks is still running. We should cancel them once the CompositorThread is closed.
Comment hidden (Intermittent Failures Robot) |
Comment 8•6 years ago
|
||
The priority flag is not set for this bug.
:kip, could you have a look please?
For more information, please visit auto_nag documentation.
Comment 10•6 years ago
|
||
bugherder |
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Description
•