Bug 1545991 - Cancel the current VR task when CompositorThread is shutdown. r=kip,sotaro

Differential Revision: https://phabricator.services.mozilla.com/D28546

--HG--
extra : moz-landing-system : lando